// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatBubble/> should render last message correctly 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 10px;
  cursor: default;
}

.c1.c1.c1.c1.c1 {
  padding: 12px;
  height: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: 240px;
  background-color: hsla(227,100%,59%,0.09);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 8px;
}

.c2.c2.c2.c2.c2 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <p
          class="c2"
          data-blade-component="text"
        >
           This is a demo message 
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatBubble/> should render last message correctly 2`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 10px;
  cursor: default;
}

.c1.c1.c1.c1.c1 {
  padding: 12px;
  height: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: 240px;
  background-color: hsla(227,100%,59%,0.09);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c2.c2.c2.c2.c2 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <p
          class="c2"
          data-blade-component="text"
        >
           This is another demo message 
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatBubble/> should render last message correctly 3`] = `
.c0.c0.c0.c0.c0 {
  max-width: 296px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 12px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 256px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="base-box"
        >
          <div
            style="display: flex;"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M3 3H7.5H9.74999L12 12L14.25 3H16.5H21V7.5V9.75L12 12L21 14.25V16.5V21H16.5H14.25L12 12L9.74999 21H7.5H3V16.5V14.25L12 12L3 9.75V7.5V3Z"
                data-blade-component="svg-path"
                fill="hsla(180, 61%, 20%, 1)"
              />
            </svg>
          </div>
        </div>
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
             This is another demo message 
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChatBubble/> should render last message correctly 4`] = `
.c0.c0.c0.c0.c0 {
  max-width: 296px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  gap: 12px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 256px;
}

.c3.c3.c3.c3.c3 {
  display: block;
  border-radius: 4px;
}

.c5.c5.c5.c5.c5 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10.c10.c10.c10.c10 {
  margin-bottom: 8px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15.c15.c15.c15.c15 {
  margin-left: 4px;
}

.c17.c17.c17.c17.c17 {
  margin-bottom: 0px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c4.c4.c4.c4.c4 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c4.c4.c4.c4.c4 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c4.c4.c4.c4.c4 label:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c4.c4.c4.c4.c4 label:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c14.c14.c14.c14.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 16px;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c13.c13.c13.c13.c13 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c13.c13.c13.c13.c13:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13.c13.c13.c13.c13:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="base-box"
        >
          <div
            style="display: flex;"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M3 3H7.5H9.74999L12 12L14.25 3H16.5H21V7.5V9.75L12 12L21 14.25V16.5V21H16.5H14.25L12 12L9.74999 21H7.5H3V16.5V14.25L12 12L3 9.75V7.5V3Z"
                data-blade-component="svg-path"
                fill="hsla(180, 61%, 20%, 1)"
              />
            </svg>
          </div>
        </div>
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3 c4"
            data-blade-component="card"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
              elevation="lowRaised"
            >
              <div
                class=""
                data-blade-component="card-body"
              >
                <div
                  class="c7"
                  data-blade-component="box"
                >
                  <p
                    class="c8"
                    data-blade-component="text"
                  >
                    Where do you want to collect payments?
                  </p>
                  <div
                    class=""
                    data-blade-component="base-box"
                  >
                    <div
                      aria-labelledby="radio-group-7-label"
                      class="c9"
                      data-blade-component="radio-group"
                      role="radiogroup"
                    >
                      <div
                        class=""
                        data-blade-component="base-box"
                      >
                        <div
                          class="c9"
                          data-blade-component="base-box"
                        >
                          <div
                            class="c10"
                            data-blade-component="base-box"
                          >
                            <div
                              class=""
                              data-blade-component="base-box"
                            >
                              <label
                                class="c11"
                                data-blade-component="radio-label"
                              >
                                <div
                                  class="c9"
                                  data-blade-component="base-box"
                                >
                                  <div
                                    class="c12"
                                    data-blade-component="base-box"
                                  >
                                    <input
                                      aria-checked="false"
                                      aria-describedby="radio-1-helptext-2"
                                      aria-disabled="false"
                                      aria-invalid="false"
                                      aria-required="false"
                                      class="c13"
                                      name="radio-group-7"
                                      role="radio"
                                      type="radio"
                                      value="website"
                                    />
                                    <div
                                      class="c14"
                                      data-blade-component="radio-icon-wrapper"
                                    />
                                    <div
                                      class="c15"
                                      data-blade-component="base-box"
                                    />
                                    <p
                                      class="c16"
                                      data-blade-component="text"
                                    >
                                      Website
                                    </p>
                                  </div>
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            class="c10"
                            data-blade-component="base-box"
                          >
                            <div
                              class=""
                              data-blade-component="base-box"
                            >
                              <label
                                class="c11"
                                data-blade-component="radio-label"
                              >
                                <div
                                  class="c9"
                                  data-blade-component="base-box"
                                >
                                  <div
                                    class="c12"
                                    data-blade-component="base-box"
                                  >
                                    <input
                                      aria-checked="false"
                                      aria-describedby="radio-3-helptext-4"
                                      aria-disabled="false"
                                      aria-invalid="false"
                                      aria-required="false"
                                      class="c13"
                                      name="radio-group-7"
                                      role="radio"
                                      type="radio"
                                      value="android"
                                    />
                                    <div
                                      class="c14"
                                      data-blade-component="radio-icon-wrapper"
                                    />
                                    <div
                                      class="c15"
                                      data-blade-component="base-box"
                                    />
                                    <p
                                      class="c16"
                                      data-blade-component="text"
                                    >
                                      Android App
                                    </p>
                                  </div>
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            class="c17"
                            data-blade-component="base-box"
                          >
                            <div
                              class=""
                              data-blade-component="base-box"
                            >
                              <label
                                class="c11"
                                data-blade-component="radio-label"
                              >
                                <div
                                  class="c9"
                                  data-blade-component="base-box"
                                >
                                  <div
                                    class="c12"
                                    data-blade-component="base-box"
                                  >
                                    <input
                                      aria-checked="false"
                                      aria-describedby="radio-5-helptext-6"
                                      aria-disabled="false"
                                      aria-invalid="false"
                                      aria-required="false"
                                      class="c13"
                                      name="radio-group-7"
                                      role="radio"
                                      type="radio"
                                      value="ios"
                                    />
                                    <div
                                      class="c14"
                                      data-blade-component="radio-icon-wrapper"
                                    />
                                    <div
                                      class="c15"
                                      data-blade-component="base-box"
                                    />
                                    <p
                                      class="c16"
                                      data-blade-component="text"
                                    >
                                      iOS App
                                    </p>
                                  </div>
                                </div>
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
